--- a/app/src/main/res/layout/meme_list_item_activity.xml
+++ b/app/src/main/res/layout/meme_list_item_activity.xml
@@ -1,4 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,7 +11,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Marshmallow"
+        android:fontFamily="@font/roboto"
+        android:text="Title"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="32sp" />
+
+    <ImageView
+        android:id="@+id/memeImage"
+        android:layout_width="321dp"
+        android:layout_height="216dp"
+        android:layout_below="@+id/name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:contentDescription="Meme"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:layout_alignStart="@+id/name"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:text="Author" />
+
+    <TextView
+        android:layout_below="@id/memeImage"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/votes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Votes" />
 </RelativeLayout>
