--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -38,10 +38,35 @@
         android:text="Author" />
 
     <TextView
-        android:layout_below="@id/memeImage"
-        android:layout_centerHorizontal="true"
         android:id="@+id/votes"
+        android:textSize="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/memeImage"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@id/down_vote"
+        android:gravity="center"
+
         android:text="Votes" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:textSize="20dp"
+        android:layout_below="@id/memeImage"
+        android:layout_toRightOf="@id/votes"
+        android:text="↑"
+        android:id="@+id/up_vote"/>
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:textSize="20dp"
+        android:layout_below="@id/memeImage"
+        android:layout_toLeftOf="@id/votes"
+        android:text="↓"
+        android:id="@+id/down_vote"/>
 </RelativeLayout>
