--- a/app/src/main/res/layout/activity_create_meme.xml
+++ b/app/src/main/res/layout/activity_create_meme.xml
@@ -10,7 +10,8 @@
         android:id="@+id/selectTemplateButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select template" />
+        android:text="Select template"
+        />
 
     <FrameLayout
         android:layout_width="match_parent"
