--- a/app/src/main/res/layout/activity_meme_template_list.xml
+++ b/app/src/main/res/layout/activity_meme_template_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- A RecyclerView with some commonly used attributes -->
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/memeTemplateRecyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
 
-</RecyclerView>
+    android:scrollbars="vertical" />
