--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -39,7 +39,7 @@
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/votes"
+        android:id="@+id/votesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/memeImage"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/memeImage"
-        android:layout_toRightOf="@id/votes"
+        android:layout_toRightOf="@id/votesLabel"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="↑"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/memeImage"
-        android:layout_toLeftOf="@id/votes"
+        android:layout_toLeftOf="@id/votesLabel"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="↓"
