--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -19,5 +19,8 @@
         <item
             android:id="@+id/nav_profile"
             android:title="Profile" />
+        <item
+            android:id="@+id/nav_sign_in"
+            android:title="Sign in" />
     </group>
 </menu>
