--- a/app/src/main/res/layout/meme_template_list_item.xml
+++ b/app/src/main/res/layout/meme_template_list_item.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
+
     <ImageView
         android:id="@+id/templateImage"
-        android:layout_width="493dp"
-        android:layout_height="177dp"
-        android:layout_weight="1"
+        android:layout_width="250dp"
+        android:layout_height="161dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic[19]" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="101dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="4dp">
+    <TextView
+        android:id="@+id/templateName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Template Name"
+        app:layout_constraintStart_toEndOf="@+id/templateImage"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/templateName"
-            android:layout_width="wrap_content"
-            android:layout_height="23dp"
-            android:layout_weight="1"
-            android:text="Template Name" />
+    <TextView
+        android:id="@+id/templateUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Username"
+        app:layout_constraintStart_toEndOf="@+id/templateImage"
+        app:layout_constraintTop_toBottomOf="@+id/templateName" />
 
-        <TextView
-            android:id="@+id/templateUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Username" />
-    </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
