--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -12,6 +12,17 @@
         android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/successText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal"
+            android:text="Signed in!"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            android:visibility="invisible" />
+
         <LinearLayout
             android:id="@+id/signInGroup2"
             android:layout_width="wrap_content"
