--- a/app/src/main/res/layout/meme_template_list_item.xml
+++ b/app/src/main/res/layout/meme_template_list_item.xml
@@ -5,6 +5,8 @@
     android:id="@+id/templateItemView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    android:background="@color/colorLightGrey"
     android:clickable="true"
     android:padding="8dp">
 
