--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -22,5 +22,8 @@
         <item
             android:id="@+id/nav_sign_in"
             android:title="Sign in" />
+        <item
+            android:id="@+id/nav_register"
+            android:title="Register" />
     </group>
 </menu>
