Working log in/log out switching.

--- a/app/src/main/res/menu/drawer_view_signed_in.xml
+++ b/app/src/main/res/menu/drawer_view_signed_in.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view"
-    >
+    tools:showIn="navigation_view">
     <group
         android:checkableBehavior="single">
         <item
@@ -13,10 +12,16 @@
             android:id="@+id/nav_home"
             android:title="Home" />
         <item
-            android:id="@+id/nav_sign_in"
-            android:title="Sign in" />
+            android:id="@+id/nav_templates"
+            android:title="Template" />
         <item
-            android:id="@+id/nav_register"
-            android:title="Register" />
+            android:id="@+id/nav_create_meme"
+            android:title="Create meme" />
+        <item
+            android:id="@+id/nav_profile"
+            android:title="Profile" />
+        <item
+            android:id="@+id/nav_sign_out"
+            android:title="Sign out" />
     </group>
 </menu>
