added translation stringvalues for all the xml

--- a/app/src/main/res/layout/activity_create_meme.xml
+++ b/app/src/main/res/layout/activity_create_meme.xml
@@ -18,63 +18,54 @@
         android:id="@+id/selectTemplateButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select template"
+        android:text="@string/select_template"
         android:onClick="selectTemplateButtonClicked"
         />
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorLightGrey">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <EditText
                 android:id="@+id/topTextEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Top text"
+                android:hint="@string/meme_hint_top_text"
                 android:inputType="textPersonName" />
-
             <ImageView
                 android:id="@+id/memeTemplateImage"
                 android:layout_width="match_parent"
                 android:layout_height="284dp"
                 android:scaleType="centerInside"
                 tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
-
             <EditText
                 android:id="@+id/bottomTextEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Bottom text"
+                android:hint="@string/meme_hint_bottom_text"
                 android:inputType="textPersonName" />
-
             <EditText
                 android:id="@+id/memeTitleEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:ems="10"
-                android:hint="Meme title"
+                android:hint="@string/meme_title"
                 android:inputType="textPersonName" />
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="10" />
-
             <Button
                 android:id="@+id/createMemeButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create meme" />
-
+                android:text="@string/meme_create" />
         </LinearLayout>
 
     </FrameLayout>
