--- a/app/src/main/res/layout/activity_create_meme_template.xml
+++ b/app/src/main/res/layout/activity_create_meme_template.xml
@@ -24,14 +24,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Image from gallery" />
+            android:text="@string/template_image_from_gallery" />
 
         <Button
             android:id="@+id/imageFromCameraButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Image from camera" />
+            android:text="@string/template_image_from_camera" />
     </LinearLayout>
 
     <EditText
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Title"
+        android:hint="@string/template_title"
         android:inputType="text"
         android:textSize="24sp" />
 
@@ -54,6 +54,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Create template" />
+        android:text="@string/template_create" />
 
 </LinearLayout>
