--- a/app/src/main/res/layout/activity_create_meme.xml
+++ b/app/src/main/res/layout/activity_create_meme.xml
@@ -41,11 +41,11 @@
                 android:inputType="textPersonName" />
 
             <ImageView
-                android:id="@+id/memeTemplateImage"
+                android:id="@+id/createMemeTemplateImage"
                 android:layout_width="match_parent"
                 android:layout_height="284dp"
-                android:scaleType="centerInside"
-                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/question_mark" />
 
             <EditText
                 android:id="@+id/bottomTextEdit"
