--- a/app/src/main/res/layout/activity_create_meme_template.xml
+++ b/app/src/main/res/layout/activity_create_meme_template.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="takePhoto"
             android:text="@string/template_image_from_camera" />
     </LinearLayout>
 
@@ -44,7 +45,7 @@
         android:textSize="24sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/template_image_view"
         android:layout_width="wrap_content"
         android:layout_height="442dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic[15]" />
