--- a/app/src/main/res/menu/drawer_view_signed_in.xml
+++ b/app/src/main/res/menu/drawer_view_signed_in.xml
@@ -15,6 +15,9 @@
             android:id="@+id/nav_templates"
             android:title="@string/nav_template" />
         <item
+            android:id="@+id/nav_create_template"
+            android:title="@string/nav_create_template"/>
+        <item
             android:id="@+id/nav_create_meme"
             android:title="@string/nav_create_meme" />
         <item
