--- a/app/src/main/res/layout/activity_create_meme_template.xml
+++ b/app/src/main/res/layout/activity_create_meme_template.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="pickImage"
             android:text="@string/template_image_from_gallery" />
 
         <Button
