--- a/app/src/main/res/layout/activity_create_meme_template.xml
+++ b/app/src/main/res/layout/activity_create_meme_template.xml
@@ -47,9 +47,9 @@
 
     <ImageView
         android:id="@+id/template_image_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="442dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic[15]" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <Button
         android:id="@+id/createMemetemplateButton"
