--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<paths xmlns:android="http://schemas.android.com/apk/res/android">-->
-    <!--<external-path name="external_files" path="."/>-->
-<!--</paths>-->
-
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <files-path name="my_images" path="images/"/>
+<paths>
+    <external-path name="my_images" path="Android/data/se.ju.myapplication/files/Pictures"/>
 </paths>
