Most things work now with recyclerview

--- a/app/bin/src/main/res/layout/meme_list_item.xml
+++ b/app/bin/src/main/res/layout/meme_list_item.xml
@@ -21,7 +21,7 @@
         android:id="@+id/memeImage"
         android:layout_width="321dp"
         android:layout_height="216dp"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/memeName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:contentDescription="Meme"
@@ -31,8 +31,8 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/memeName"
+        android:layout_alignStart="@+id/memeName"
         android:layout_marginStart="0dp"
         android:layout_marginTop="2dp"
         android:text="Author"
