--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/memeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,25 +21,25 @@
         android:id="@+id/memeImage"
         android:layout_width="321dp"
         android:layout_height="216dp"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/memeName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:contentDescription="Meme"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/memeAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/memeName"
+        android:layout_alignStart="@+id/memeName"
         android:layout_marginStart="0dp"
         android:layout_marginTop="2dp"
         android:text="Author"
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/votesLabel"
+        android:id="@+id/memeVotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/memeImage"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/memeImage"
-        android:layout_toRightOf="@id/votesLabel"
+        android:layout_toRightOf="@id/memeVotes"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="↑"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/memeImage"
-        android:layout_toLeftOf="@id/votesLabel"
+        android:layout_toLeftOf="@id/memeVotes"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="↓"
