--- a/app/src/main/res/drawable/spinner.xml
+++ b/app/src/main/res/drawable/spinner.xml
@@ -5,29 +5,36 @@
         <vector xmlns:android="http://schemas.android.com/apk/res/android"
             android:width="24dp"
             android:height="24dp"
-            android:alpha="0.75"
-            android:tint="#919191"
             android:viewportWidth="24.0"
             android:viewportHeight="24.0">
-            <group android:name="loaderGroup">
-
+            <group
+                android:name="loader_group"
+                android:pivotX="12"
+                android:pivotY="12"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:tint="#919191"
+                >
                 <path
+
                     android:fillColor="#FF000000"
                     android:pathData="M19,8l-4,4h3c0,3.31 -2.69,6 -6,6 -1.01,0 -1.97,-0.25 -2.8,-0.7l-1.46,1.46C8.97,19.54 10.43,20 12,20c4.42,0 8,-3.58 8,-8h3l-4,-4zM6,12c0,-3.31 2.69,-6 6,-6 1.01,0 1.97,0.25 2.8,0.7l1.46,-1.46C15.03,4.46 13.57,4 12,4c-4.42,0 -8,3.58 -8,8H1l4,4 4,-4H6z" />
-            </group>
 
+            </group>
         </vector>
     </aapt:attr>
 
-    <target android:name="loaderGroup">
+    <target android:name="loader_group">
         <aapt:attr name="android:animation">
-            <objectAnimator
-                android:pivotX="50%"
-                android:pivotY="50%"
-                android:duration="2000"
-                android:propertyName="rotation"
-                android:valueFrom="0"
-                android:valueTo="360" />
+            <set>
+                <objectAnimator
+                    android:duration="2000"
+                    android:pivotX="50%"
+                    android:pivotY="50%"
+                    android:propertyName="rotation"
+                    android:valueFrom="0"
+                    android:valueTo="360" />
+            </set>
         </aapt:attr>
     </target>
 </animated-vector>
