Added some more resours strings and removed old xml layout that wherent used.

--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -26,7 +26,7 @@
         android:layout_below="@+id/memeName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
-        android:contentDescription="Meme"
+        android:contentDescription="@string/meme_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:layout_alignStart="@+id/memeName"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Author"
+        android:text="@string/author_default_text"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/memeName" />
@@ -80,7 +80,7 @@
         android:layout_toRightOf="@id/memeVotes"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="↑"
+        android:text="@string/upvote_btn_text"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/memeVotes"
@@ -97,7 +97,7 @@
         android:layout_toLeftOf="@id/memeVotes"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="↓"
+        android:text="@string/downvote_btn_text"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/memeVotes"
         app:layout_constraintStart_toStartOf="parent"
