--- a/app/src/main/res/layout/meme_template_list_item.xml
+++ b/app/src/main/res/layout/meme_template_list_item.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Template Name"
+        android:text="@string/template_title"
         app:layout_constraintStart_toEndOf="@+id/templateImage"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Username"
+        android:text="@string/username_hint"
         app:layout_constraintStart_toEndOf="@+id/templateImage"
         app:layout_constraintTop_toBottomOf="@+id/templateName" />
 
