--- a/app/src/main/res/layout/activity_create_meme_template.xml
+++ b/app/src/main/res/layout/activity_create_meme_template.xml
@@ -1,61 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/imageFromGalleryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="selectPhoto"
+                android:text="@string/template_image_from_gallery" />
+
+            <Button
+                android:id="@+id/imageFromCameraButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="takePhoto"
+                android:text="@string/template_image_from_camera" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/editMemeTemplateTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/template_title"
+            android:inputType="text"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/createMemeTemplateImage"
+            android:layout_width="match_parent"
+            android:layout_height="442dp"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
         <Button
-            android:id="@+id/imageFromGalleryButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/createMemetemplateButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="selectPhoto"
-            android:text="@string/template_image_from_gallery" />
-
-        <Button
-            android:id="@+id/imageFromCameraButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="takePhoto"
-            android:text="@string/template_image_from_camera" />
+            android:text="@string/template_create" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/editMemeTemplateTitle"
+    <FrameLayout
+        android:id="@+id/layoutProgressBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/template_title"
-        android:inputType="text"
-        android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:background="@color/tintBlack"
+        android:visibility="gone">
 
-    <ImageView
-        android:id="@+id/createMemeTemplateImage"
-        android:layout_width="match_parent"
-        android:layout_height="442dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
 
-    <Button
-        android:id="@+id/createMemetemplateButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/template_create" />
-
-</LinearLayout>
+</RelativeLayout>
