--- a/app/src/main/res/layout/fragment_main_feed.xml
+++ b/app/src/main/res/layout/fragment_main_feed.xml
@@ -9,5 +9,5 @@
         android:id="@+id/feedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="0dp" />
+        android:background="@color/mainfeedBackground" />
 </android.support.v4.widget.SwipeRefreshLayout>
