--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="@color/listItemBackground"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -78,6 +81,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/memeVotes"
+        android:backgroundTint="@color/defaultButton"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="@string/upvote_btn_text"
@@ -95,6 +99,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_toLeftOf="@id/memeVotes"
+        android:backgroundTint="@color/defaultButton"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:text="@string/downvote_btn_text"
@@ -109,6 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
+        android:backgroundTint="@color/defaultButton"
         android:drawableStart="@android:drawable/ic_menu_delete"
         android:text="@string/remove"
         android:visibility="invisible"
