Updated meme feed item design.

--- a/app/src/main/res/layout/meme_list_item.xml
+++ b/app/src/main/res/layout/meme_list_item.xml
@@ -24,11 +24,12 @@
 
     <ImageView
         android:id="@+id/memeImage"
-        android:layout_width="321dp"
-        android:layout_height="216dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/memeName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/meme_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,31 +61,29 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
 
-        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="Votes"
         android:textColor="@android:color/black"
         android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/memeImage"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/memeImage" />
 
     <Button
         android:id="@+id/upVote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@id/memeImage"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/memeVotes"
+        android:background="@drawable/arrow"
         android:backgroundTint="@color/defaultButton"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="@string/upvote_btn_text"
+        android:rotation="-90"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/memeVotes"
@@ -92,17 +91,18 @@
 
     <Button
         android:id="@+id/downVote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@id/memeImage"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_toLeftOf="@id/memeVotes"
+        android:background="@drawable/arrow"
         android:backgroundTint="@color/defaultButton"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:text="@string/downvote_btn_text"
+        android:rotation="90"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/memeVotes"
         app:layout_constraintStart_toStartOf="parent"
